--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/exam_project
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Ma13As01
-spring.jpa.show-sql=true
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:mydb
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:mydb
+spring.datasource.hikari.username=sa
+spring.datasource.hikari.password=
+spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=true
